# ultrastar-automation-tool

./: .gitignore  CLAUDE.md  DEV_LOG.md  README.md  README_EN.md  README_ZH.md  SPEC.md  pyproject.toml  requirements.txt  ultrastar_clone.spec
demo_output/Usher - U Remind Me/: Usher - U Remind Me.txt
demo_output/coldplay - yellow/: coldplay - yellow.txt
docs/superpowers/plans/: 2026-05-22-song-singing-player.md
docs/superpowers/specs/: 2026-05-22-song-singing-player-design.md
src/ultrastar_clone/: __init__.py  cli.py  gui_app.py  models.py
src/ultrastar_clone/core/: __init__.py  converter.py  downloader.py  editor.py  playback_timeline.py  scraper.py  song_parser.py
src/ultrastar_clone/gui/: __init__.py  app.py  home_page.py  library_page.py  log_page.py  main_window.py  player_page.py  settings_page.py  utils.py  widgets.py  workers.py
src/ultrastar_clone/services/: __init__.py  controller.py  errors.py  library.py  logger.py  settings.py
tests/: test_cli.py  test_controller.py  test_converter.py  test_downloader.py  test_editor.py  test_gui_import.py  test_library.py  test_lyric_display_widget.py  test_models.py  test_playback_timeline.py  test_player_page_layout.py  test_scraper.py  test_settings.py  test_song_parser.py  test_user_errors.py
